--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <header class="header">
-    <nav>
+    <nav class="nav1">
         <div class="icon-title">
         <img class="icon01" src="images/Frame.png" alt="">
         <h1> <span class="t1">G</span>amer</h1>
     </div>
-    <ul>
+    <ul class="ul">
         <li><a href="">About Us</a></li>
         <li><a href="">Developers</a></li>
         <li><button>Follow Us On <i class="fa fa-youtube-play" style="color: red;"></i></button></li>
