--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><button>Follow Us On <i class="fa fa-youtube-play" style="color: red;"></i></button></li>
     </ul>
     </nav>
-
+</header>
     <section class="banner-main">
         <div class="banner1">
         <div>
@@ -42,6 +42,42 @@
         <img class="banner-img" src="images/Group 18.png" alt="">
     </div>
     </section>
-</header>
+    <section class="main-02">
+        <div>
+            <img src="images/pngwing 4.png" alt="">
+        </div>
+        <div class="main-03">
+            <h1 class="gamer1">We are gamer</h1>
+            <p>An international digital games and entertainment <br>company. We develop, publish and distribute multiplayer <br>mobile games. We reach over 400 million players each<br> month and our audience keeps growing.</p><br>
+            <button class="btn03">Know More</button>
+            <p>Our Purpose ...</p>
+            <h2>“unleash the gamer in everyone”</h2>
+
+        </div>
+    </section>
+<section class="main-04">
+    <div class="funny-videos">
+        <h1>Online Games <span class="funny">Funny Videos</span> </h1>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+    </div>
+    <div class="videos2">
+    <div>
+        <img src="images/Rectangle 4.png" alt="">
+        <figcaption>No Download. No Installs. Play <br>games Instantly on Gamer.</figcaption>
+    </div>
+    <div>
+        <img src="images/Rectangle 5.png" alt="">
+        <figcaption>Did you score? #unblockedgames<br> #school</figcaption>
+    </div>
+    <div>
+        <img src="images/Rectangle 7.png" alt="">
+        <figcaption>Breaking game records <br>like OG</figcaption>
+    </div>
+    <div>
+        <img src="images/Rectangle 6.png" alt="">
+        <figcaption>Busted gaming on school laptop, <br>but you are still lit.</figcaption>
+    </div>
+</div>
+</section>
 </body>
 </html>
