--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
     </div>
     <div class="videos2">
     <div>
-        <img src="images/Rectangle 4.png" alt="">
+        <img class="a" src="images/Rectangle 4.png" alt="">
         <figcaption>No Download. No Installs. Play <br>games Instantly on Gamer.</figcaption>
     </div>
     <div>
-        <img src="images/Rectangle 5.png" alt="">
+        <img class="b" src="images/Rectangle 5.png" alt="">
         <figcaption>Did you score? #unblockedgames<br> #school</figcaption>
     </div>
     <div>
-        <img src="images/Rectangle 7.png" alt="">
+        <img class="c" src="images/Rectangle 7.png" alt="">
         <figcaption>Breaking game records <br>like OG</figcaption>
     </div>
     <div>
-        <img src="images/Rectangle 6.png" alt="">
+        <img class="d" src="images/Rectangle 6.png" alt="">
         <figcaption>Busted gaming on school laptop, <br>but you are still lit.</figcaption>
     </div>
 </div>
