--- a/index.html
+++ b/index.html
@@ -79,5 +79,20 @@
     </div>
 </div>
 </section>
+<section class="section05"> 
+    <div class="p2">
+        <h3 class="play2">Play Instantly,</h3>
+        <h3>No Downloads</h3>
+        <h3> No Installs.</h3>
+        <p>Play games online for free without <br>downloading. Just click the Play button <br>and play instantly in your browser.</p>
+    </div>
+    <div>
+        <img class="img7" src="images/Rectangle 55.png" alt="">
+        <div class="badge">
+            <img class="img8" src="images/Rectangle 66.png" alt="">
+
+        </div>
+    </div>
+</section>
 </body>
 </html>
